:arrow_up: Requisições de deletar e editar contato

--- a/lista-contatos/src/app/app.component.html
+++ b/lista-contatos/src/app/app.component.html
@@ -1,1 +1,8 @@
-<router-outlet></router-outlet>
+<header>
+  <a routerLink="cadastro"> Cadastro </a>
+  <a routerLink="contatos"> Contatos</a>
+</header>
+<main>
+  <router-outlet></router-outlet>
+</main>
+
