--- a/lista-contatos/src/app/list-contacts/list-contacts.component.html
+++ b/lista-contatos/src/app/list-contacts/list-contacts.component.html
@@ -4,5 +4,8 @@
     <p> {{contato.name}}</p>
     <p> {{contato.email}}</p>
     <p> {{contato.telephone_number}} </p>
+    <button> Editar</button>
+    <button> X </button>
+    <p> _________________________</p>
   </div>
 </section>
