:arrow_up: Testes de edição de contatos

--- a/lista-contatos/src/app/list-contacts/list-contacts.component.html
+++ b/lista-contatos/src/app/list-contacts/list-contacts.component.html
@@ -4,7 +4,7 @@
     <p> {{contato.name}}</p>
     <p> {{contato.email}}</p>
     <p> {{contato.telephone_number}} </p>
-     <button (click)="update(contato)"> Editar</button>
+     <button (click)="onEdit(contato)"> Editar</button>
     <button (click)="delete(contato)"> X </button>
     <p> _________________________</p>
   </div>
