:arrow_up: Requisição de editar contato

--- a/lista-contatos/src/app/new-contact/new-contact.component.html
+++ b/lista-contatos/src/app/new-contact/new-contact.component.html
@@ -16,5 +16,5 @@
     <input id="telephone" type="text" [(ngModel)]="telephone" name="telephone">
   </div>
 
-  <button type="submit"> Adicionar </button>
+  <button type="submit"> Salvar </button>
 </form>
