:arrow_up: Atualização de lógica de verificação de edição ou criação de contatos e estilização da primeira pagina

--- a/lista-contatos/src/app/app.component.html
+++ b/lista-contatos/src/app/app.component.html
@@ -1,6 +1,6 @@
-<header>
-  <a routerLink="cadastro"> Cadastro </a>
-  <a routerLink="contatos"> Contatos</a>
+<header class="header">
+  <a mat-button routerLink="cadastro"> Cadastro </a>
+  <a mat-button routerLink="contatos"> Contatos</a>
 </header>
 <main>
   <router-outlet></router-outlet>
