--- a/lista-contatos/src/app/new-contact/new-contact.component.html
+++ b/lista-contatos/src/app/new-contact/new-contact.component.html
@@ -1,8 +1,7 @@
 
 <section class="container">
   <form class="formulario" (ngSubmit)="createContact()">
-    <h2> Novo Contato</h2>
-
+    <h2 class="title"> Novo Contato</h2>
     <div class="form-field">
       <label for="name"> Name</label>
       <input id="name" type="text" [(ngModel)]="name" name="name">
@@ -22,3 +21,20 @@
   </div>
   </form>
 </section>
+
+
+ <!-- <section class="container">
+  <mat-form-field>
+    <input matInput placeholder="Nome">
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput placeholder="Nome">
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput placeholder="Nome">
+  </mat-form-field>
+  <button mat-button > Salvar </button>
+ </section> -->
+
+
+
