--- a/lista-contatos/src/styles.css
+++ b/lista-contatos/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 :root {
-  --primary: #369c38;
+  --primary: #A020F0;
   --secondary: #132A13;
   --padding: 15px;
   --cinza: #405040;
@@ -17,3 +17,6 @@
   padding: 30px;
   margin: 0 auto;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
