--- a/lista-contatos/src/app/list-contacts/list-contacts.component.html
+++ b/lista-contatos/src/app/list-contacts/list-contacts.component.html
@@ -26,11 +26,12 @@
 
       </div>
 
-
-
-    <button (click)="onEdit(contato)"> Editar</button>
-    <button (click)="delete(contato)"> X </button>
+        <mat-icon (click)="onEdit(contato)">edit</mat-icon>
+        <mat-icon (click)="delete(contato)">delete_outline</mat-icon>
 
   </mat-list-item>
 </mat-list>
 </section>
+
+
+<!-- <mat-icon name="delete"aria-hidden="false" aria-label="Example delete icon">home</mat-icon> -->
